--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -117,7 +117,8 @@
   source: https://en.wikipedia.org/wiki/Charlie_Musselwhite
   songs:
   - Baby Will You Please Help Me
-  - If I Should Have Bad Luck 
+  - If I Should Have Bad Luck
+  - My Kinda Gal
   - Christo Redemptor
 
 
