--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -88,7 +88,7 @@
   - Walter's Boogie
 
 
-- name: Charlie Mccoy
+- name: Charlie McCoy
   bio:
   - March 28, 1941 -
   - American session musician, harmonica player,
