--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -363,7 +363,7 @@
   - not receive the phone call.
   source: https://en.wikipedia.org/wiki/Rick_Estrin_%26_The_Nightcats
   songs:
-  - The Blues Ain\'t Going Nowhere
+  - The Blues Ain't Going Nowhere
   - My Next Ex-Wife
   - Nothing but love
 
