--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -1,7 +1,7 @@
 - name: Little Walter
   bio:
   - May 1, 1930 - February 15, 1968
-  - American blues musician, singer, and songwriter
+  - American blues musician, singer and songwriter
   - Inducted into The Rock and Roll Hall of Fame in 2008
   notes:
   - Joined Muddy Waters' band in 1948
