--- a/config/config.ini
+++ b/config/config.ini
@@ -13,7 +13,7 @@
 #
 # The first section [any-mode] defines default values for all modes,
 # which may be overriden in one of the three sections for the
-# individual modes, [listen], [quiz] and [licks].
+# individual modes, [listen], [licks] and [recall].
 #
 # These four sections together define the interactive behaviour of
 # harpwise and may be overridden by commandline arguments: e.g. the
@@ -51,7 +51,7 @@
 
   #
   # Keys, that can also be set as commandline arguments; see e.g.
-  # 'harpwise quiz' for a description
+  # 'harpwise recall' for a description
   #
   display = chart-scales
   comment = note
@@ -71,13 +71,13 @@
 
 [listen]
 
-[quiz]
-  comment = holes-some
-
 [licks]
   comment = holes-all
   immediate = true
   tags_any = 
+
+[recall]
+  comment = holes-some
 
 [calibrate]
   # db used for volume clause when doing auto calibration
