--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -66,6 +66,19 @@ tools:
   edit-config: |
     invoke editor on your personal config file
     <%= $early_conf[:config_file_user] %>
+quiz:
+  random, ran, rand: |
+    choose one quiz flavour at random
+  replay: |
+    harpwise plays a sequence of holes and you should play it back
+  play-scale: |
+    harpwise gives you the name of a scale and asks to play it back
+  find-scale-shuffled: |
+    harpwise plays the holes of a scale (shuffled) and asks you for
+    its name
+  find-scale-ordered: |
+    harpwise plays the holes of a scale (in order) and asks you for
+    its name
 develop:
   man: |
     produce man page from erb-template
