--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -81,6 +81,8 @@ quiz:
     its name
   hear-inter: |
     plays an interval and asks for its name
+  add-inter: |
+    gives a hole and an interval and asks for the resulting hole
 develop:
   man: |
     produce man page from erb-template
