--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -88,7 +88,7 @@ quiz:
     gives a key of harmonica and asks for the matching
     key of song (2nd position) or vise vers
   hear-key: |
-    plays sequence of notes based on a random key; asks for this key
+    plays sequence of notes starting from a random key; asks for this key
     (but not for the matching harmonica)
 develop:
   man: |
