--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -298,7 +298,7 @@
   notes:
   - Moved to New York at the age of 18 with little more than a
   - harmonica in his pocket
-  - Together wir Eric Burdon formed the crossover band "War"
+  - Together with Eric Burdon formed the crossover band "War"
   - where he formed a horn section together with the saxophone
   - '"...among the best rock-blues-soul harmonica players"'
   - (quote by Bill Snyder)
