better help names in quiz

--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -88,7 +88,8 @@ quiz:
     gives a key of harmonica and asks for the matching
     key of song (2nd position) or vice versa
   hear-key: |
-    plays sequence of notes starting from a random key; asks for this key
+    plays a sequence of notes starting from a random key
+    (i.e. its base-note); asks for this key
     (rather than for the matching harmonica)
 develop:
   man: |
