new player and easier search for

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -84,6 +84,7 @@
   source: https://en.wikipedia.org/wiki/Big_Walter_Horton
   songs:
   - Easy
+  - Everybody's Fishing
   - Walking By Myself
   - Walter's Boogie
 
@@ -113,7 +114,8 @@
   - Journey through the blues from his birth in Mississippi
   - to Memphis, Chicago and California.
   - Fifty years of nonstop touring, released over 20 albums
-  - Reportedly the inspiration for Elwood Blues
+  - Reportedly the inspiration for Elwood Blues from the film
+  - The Blues Brothers
   source: https://en.wikipedia.org/wiki/Charlie_Musselwhite
   songs:
   - Baby Will You Please Help Me
@@ -502,3 +504,19 @@
   - But Anyway
   - Harmonica Musings
   - No Woman No Cry
+
+
+- name: Carlos del Junco
+  bio:
+  - May 17, 1958 -
+  - Cuban-Canadian harmonica player
+  - Best Blues Album nomination, Juno Awards, 1999
+  - 2 Gold Medals at Hohner World Harmonica Championship
+  notes:
+  - Uses overblows regularly, learned from Howard Levy
+  - Formed the blues/jazz fusion band the Delcomos in 1990
+  source: https://en.wikipedia.org/wiki/Carlos_del_Junco
+  songs:
+  - Diddle It
+  - Blues del Junco
+  
