--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -110,6 +110,7 @@
   - January 31, 1944 -
   - American blues harmonica player and bandleader
   - Inducted into the Blues Hall of Fame in 2010
+  - 14 Grammy nominations, 33 Blues Music Awards
   notes:
   - Journey through the blues from his birth in Mississippi
   - to Memphis, Chicago and California.
