options --flat and --sharp

--- a/config/config.ini
+++ b/config/config.ini
@@ -89,11 +89,12 @@
 # simply takes all its values from [licks]
 
 [general]
-
-  # Normally the way you write your scale (with flats or with sharps),
-  # determines, what harpwise will use; only if the scale has none
-  # of them, the config below will decide
-  pref_sig_def = flat
+  # When printing notes: use sharps or flats ?
+  # We are using  combined config here so we are not analogous
+  # to the commandline, which has two options --flats and --sharps.
+  # The reason is that below config can be more easily overridden in
+  # user config-file
+  sharps_or_flats = flats
 
   
   # The value of time_slice below determines, how often harpwise will
